@@ -183,6 +183,11 @@ static const char *const script_ext_enums[] = {
 
 static const char *script_ext_mode = script_ext_soft;
 
+
+/* User-controllable flag to suppress event notification on CLI.  */
+
+static bool user_wants_cli_suppress_notification = false;
+
 /* Utility used everywhere when at least one argument is needed and
    none is supplied.  */
 
@@ -2053,6 +2058,24 @@ show_max_user_call_depth (struct ui_file *file, int from_tty,
 		    value);
 }
 
+static void
+maint_show_suppress_notification_cli (ui_file *file, int from_tty,
+				      cmd_list_element *c, const char *value)
+{
+  fprintf_filtered (file, _("Suppression of printing CLI notification events "
+			    "is %s.\n"), value);
+}
+
+static void
+maint_set_suppress_notification_cli (const char *args, int from_tty,
+				     cmd_list_element *c)
+{
+  cli_suppress_notification.user_selected_context
+    = user_wants_cli_suppress_notification;
+  cli_suppress_notification.normal_stop
+    = user_wants_cli_suppress_notification;
+}
+
 /* Returns the cmd_list_element in SHOWLIST corresponding to the first
    argument of ARGV, which must contain one single value.
    Throws an error if no value provided, or value not correct.
@@ -2621,6 +2644,18 @@ Make \"wLapPeu\" an alias of 2 nested \"with\":\n\
 	       alias_help.c_str ());
 
   set_cmd_completer_handle_brkchars (c, alias_command_completer);
+
+  add_setshow_boolean_cmd ("suppress-notification-cli", no_class,
+			   &user_wants_cli_suppress_notification,
+			   _("\
+Set whether printing notification events on CLI is suppressed."), _("\
+Show whether printing notification events on CLI is suppressed."), _("\
+When on, printing notification events (such as inferior/thread switch)\n\
+on CLI is suppressed."),
+			   maint_set_suppress_notification_cli,
+			   maint_show_suppress_notification_cli,
+			   &maintenance_set_cmdlist,
+			   &maintenance_show_cmdlist);
 
   const char *source_help_text = xstrprintf (_("\
 Read commands from a file named FILE.\n\
